--- a/code/html/index.html
+++ b/code/html/index.html
@@ -8,54 +8,56 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div class="container">
+<div id="container" class="container">
     <form>
         <h2>MIDI configuration</h2>
-        <div class="panel panel-default">
-            <div class="panel-heading">A Basic Panel</div>
-            <div style="padding: 1em" class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="type">Type</label>
-                        <!--           <input type="text" class="form-control" placeholder="" id="first">-->
-                        <select name="type" id="type" class="form-control">
-                            <option value="note_on">Note on</option>
-                            <option value="note_off">Note off</option>
-                            <option value="polyphonic">Polyphonic Key Pressure</option>
-                            <option value="cc">Control Change</option>
-                            <option value="pc">Program Change</option>
-                            <option value="channel_pressure">Channel Pressure</option>
-                            <option value="pitch_bend">Pitch Bend Change</option>
-                        </select>
-                    </div>
-                </div>
-                <!--  col-md-6   -->
+        <div class="panel panel-default" id="button_1_panel">
+            <div class="panel-heading">Button 1</div>
+            {{ row }}
+<!--            <div style="padding: 1em" id="button_1" class="row">-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="form-group">-->
+<!--                        <label for="type">Type</label>-->
+<!--                        &lt;!&ndash;           <input type="text" class="form-control" placeholder="" id="first">&ndash;&gt;-->
+<!--                        <select name="type" id="type" class="form-control">-->
+<!--                            <option value="note_on">Note on</option>-->
+<!--                            <option value="note_off">Note off</option>-->
+<!--                            <option value="polyphonic">Polyphonic Key Pressure</option>-->
+<!--                            <option value="cc">Control Change</option>-->
+<!--                            <option value="pc">Program Change</option>-->
+<!--                            <option value="channel_pressure">Channel Pressure</option>-->
+<!--                            <option value="pitch_bend">Pitch Bend Change</option>-->
+<!--                        </select>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                &lt;!&ndash;  col-md-6   &ndash;&gt;-->
 
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="channel">Channel</label>
-                        <select id="channel" name="channel" class="form-control"></select>
-                    </div>
-                </div>
-                <!--  col-md-6   -->
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="data_1">Data 1</label>
-                        <input type="number" name="data_1" min="0" max="127" class="form-control" placeholder=""
-                               id="data_1">
-                    </div>
-                </div>
-                <!--  col-md-6   -->
+<!--                <div class="col-md-2">-->
+<!--                    <div class="form-group">-->
+<!--                        <label for="channel">Channel</label>-->
+<!--                        <select id="channel" name="channel" class="form-control"></select>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                &lt;!&ndash;  col-md-6   &ndash;&gt;-->
+<!--                <div class="col-md-2">-->
+<!--                    <div class="form-group">-->
+<!--                        <label for="data_1">Data 1</label>-->
+<!--                        <input type="number" name="data_1" min="0" max="127" class="form-control" placeholder=""-->
+<!--                               id="data_1">-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                &lt;!&ndash;  col-md-6   &ndash;&gt;-->
 
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="data_2">Data 2</label>
-                        <input type="number" name="data_2" min="0" max="127" class="form-control" placeholder=""
-                               id="data_2">
-                    </div>
-                </div>
-                <!--  col-md-6   -->
-            </div>
+<!--                <div class="col-md-2">-->
+<!--                    <div class="form-group">-->
+<!--                        <label for="data_2">Data 2</label>-->
+<!--                        <input type="number" name="data_2" min="0" max="127" class="form-control" placeholder=""-->
+<!--                               id="data_2">-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                &lt;!&ndash;  col-md-6   &ndash;&gt;-->
+<!--            </div>-->
+        <p id="1_add" >Add</p>
 
         </div>
 
@@ -64,14 +66,45 @@
     </form>
 </div>
 <script>
-    // window.onload(() => {
-    for (var i = 1; i <= 16; i++) {
-        var select = document.getElementById("channel");
-        var option = document.createElement("OPTION");
-        select.options.add(option);
-        option.text = i;
-        option.value = i;
-    }
+  // var invocation = new XMLHttpRequest();
+  // var url = 'http://192.168.1.27/note/1/';
+  //
+  // function callOtherDomain(request) {
+  //   request.open('GET', url, true);
+  //   request.onreadystatechange = handler;
+  //   request.send();
+  // }
+  //
+  // function handler(evtXHR) {
+  //   if (invocation.readyState == 4)
+  //   {
+  //     if (invocation.status == 200) {
+  //         alert(invocation.response)
+  //     }
+  //     else {
+  //       alert("Invocation Errors Occured");
+  //     }
+  //   }
+  // }
+  // callOtherDomain(invocation)
+//   document.getElementById('1_add').addEventListener('click', ()=>{
+//       const clone = document.getElementById("button_1").cloneNode(true);
+//       const panel =document.getElementById("button_1_panel")
+//       panel.insertBefore(clone, panel.childNodes[-2])
+//   })
+// //   const panel = document.createElement('div');
+// //   const heading = document.createElement('div');
+// //   heading.classList.add('panel-heading');
+// //   heading.innerText = 'Button 2';
+// //   panel.appendChild(heading);
+// // document.getElementById('container').appendChild(panel);
+//     for (var i = 1; i <= 16; i++) {
+//         var select = document.getElementById("channel");
+//         var option = document.createElement("OPTION");
+//         select.options.add(option);
+//         option.text = i;
+//         option.value = i;
+//     }
     // })
 </script>
 
